...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Login">
                                    <color key="baseForegroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="loginButtonMain"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <action selector="loginButtonPressed:" destination="miB-lL-5TD" eventType="touchUpInside" id="oLQ-CO-bV6"/>
                                </connections>
                            </button>
                        </subviews>
...
